# LaGriT

./: .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  LICENSE.md  MAC_EnvironmentalVar.sh  MAC_install-exodus.sh  Makefile  README  README.md  autodoc_pylagrit.html  compile.bat  docssite_map.md  genindex.html  index.html  install-exodus.sh  install-exodus2.sh  install.sh  logx3dgen  mkdocs.yml  outx3dgen  pylagrit.py  pylagritrc_example  searchindex.js  setup.py  windows_build.md
examples/: BasicExample.ipynb  CMakeLists.txt  Facesets.ipynb  WaveletExample.ipynb  compile.bat  create_exo.py  createpts_dxyz.py  ex_gridder.py  ex_merge_mesh_objects.py  ex_read_lagrit_binary_mos.py  ex_read_mesh.py  ex_refine_edge.py  ex_rotate.py  ex_rotate_stack.py  ex_triangulate.py  example.c  example.py.in  facesets_example.exo  main.cpp
examples/arctic_2D/: surface_coords2.avs
examples/complete_interface/: CMakeLists.txt  compile.bat
examples/complete_interface/src/: Lagrit.cpp  Lagrit.hpp  main.cpp
examples/data/shapefile/: example_shapefile.dbf  example_shapefile.shp  example_shapefile.shx
examples/debugging/cmo_get_name/: CMakeLists.txt  interface_lagrit.F  lagrit_main.F  main.cpp  subroutine.F
examples/ideas_mesh/: ideas_mesh.py
examples/liblagrit/: Makefile  lagrit.h  main.cxx
src/: 00README  CMakeLists.txt  ColoredGraphModule.f90  GraphModule.f90  LowPassFilterModule.f90  Makefile  Makefile.depends  README  README.compile  addmesh.f  addmesh_add.f  addmesh_amr.f  addmesh_append.f  addmesh_append_nosb.f  addmesh_delete.f  addmesh_intersection.f  addmesh_merge.f  addmesh_nosb.f  addmesh_overlap.f  addmesh_pyramid.f  addmesh_reflect.f  agd3d.f  angle3.f  angle3c.f  angle3v.f  anothermatbld3d.c  anothermatbld3d_wrapper.f  aratio_element.f  aratio_element_edge.f  aratio_hex.f  aratio_qud.f  aratio_tet.f  aratio_tri.f  assign_quadrant_id.f  beads_ona_ring.f  bin_ij_edge.f  bingrid.f  blockcom.h  bndpts.f  boundary.f  (+744 more)
src/core/memory/: Versions.txt  hpsorti.f  hpsortim.f  hpsortrmp.f  iimax.f  inv3x3.f  isort.f  nextlun.f  nulltoblank_lg.f  nxtilt.f
src/examples/: CMakeLists.txt  example.c  example.py.in
src/exo_files/: exodusII.inc
src/lg_core/: CMakeLists.txt  README.compile.txt  addmesh_add.f  addmesh_intersection.f  addmesh_merge.f  addmesh_overlap.f  angle3c.f  angle3v.f  anothermatbld3d.c  anothermatbld3d_wrapper.f  aratio_qud.f  aratio_tri.f  beads_ona_ring.f  bingrid.f  buildbin.scr  cee_chain.f  cel.f  chglocl.f  chkreg.f  chkregv.f  closed_surfaces.f  cmerge.h  cmo_command.f  cmo_delatt_cmo.f  cmo_dump_cmo.f  cmo_get_attdef.f  cmo_get_name_type.f  cmo_get_stdptrs.f  cmo_length.f  cmo_set_attinfo.f  cmo_set_default.f  cmo_set_info.f  cmo_verify.f  compute.f  config.sh  consts.h  control_command_lg.f  copyatt_mpary_lg.f  correctpc.f  coupling_coef_wrapper.f  (+123 more)
src/lg_interface/: CMakeLists.txt  export_windows.def  interface.F  interface.f90  interface.f90.backup
src/lg_interface/include/: lagrit.h  lg.h
src/lg_interface/src/: bind_c_to_fortran.f90  exports.def  interface.f90  lg_interface.h  public_interface.cpp
src/lg_util/: CMakeLists.txt  Makefile  Makefile.depends  README  close.f  commands_lg.h  cvmgn.f  cvmgnr.f  cvmgp.f  cvmgtr.f  cvmgz.f  cvmgzr.f  fexist.f  getcmds.f  gmvwritef.c  hassign.f  heapexit.f  hpsortimp.f  icharln.f  iimin.f  inv_schmidt_hilbert_lg.f  io.c  isamax.f  kmprsmr.f  kmprsn.f  kmprsnirr.f  kmprsnr.f  kmprsnrrr.f  lunget.f  mm2000.F  mm2000_m64.h  mmsc.c  opsys.h  rdbms.h  setbit.f  shiftl.f  shiftr.f  ssort.f  ssum.f
src/meshing/addmesh/: addmesh_delete.f
src/meshing/cmo/: cmo_get_intinfo.f  cmo_mm_error.f  cmo_modatt_cmo.f  cmo_select.f  cmo_status.f
test/: 00README  CMakeLists.txt  README  runtests.py  suite.py  test_lagrit.py
test/level01/: 00README  README  RUNS  check_test.py  clean_testdirs.scr  control01.py  diffout_lin.txt  diffout_lin_select.txt  run_test.py  suite.py
test/level01/addmesh_add/: logx3dgen  output_merge_hex.gmv  polygon.gmv  polygon.inp
test/level01/addmesh_append/: input.lgi  logx3dgen
test/level01/addmesh_doublemesh/: input.lgi  input_doublemesh.inp  output_doublemesh.gmv
test/level01/addmesh_merge/: input.lgi
test/level01/cmo_addatt_normals/: bug105.lgi  bug106.lgi  bug108.lgi  gable.lgi  gable_synth.lgi  input.lgi
test/level01/cmo_readatt/: input.lgi  input_tabs.lgi
test/level01/connect_cube/: input.lgi  outx3dgen
test/level01/connect_errors/: run_lagrit  test_delaunay_2d
test/level01/createpts/: outx3dgen
test/level01/createpts_filter/: ._input.lgi  input.lgi
test/level01/eltset/: .input.lgi.swp  eset02.cellset  eset04.cellset  eset06.cellset  input.lgi  test01.gmv
test/level01/exodus/: input.lgi
test/level01/filter/: input.lgi
test/level01/grid2grid/: logx3dgen  outx3dgen
test/level01/hextotet/: input.lgi
test/level01/hybrid_volume/: input.lgi  input03.inp  input09.inp  logx3dgen  out_01.gmv  out_01.stor  out_02.gmv  out_03.gmv  out_04.gmv  out_04.stor  out_05.stor  out_06.stor  out_07.stor  outx3dgen  test01.gmv  test01.stor  test02.gmv  test03.gmv  test04.gmv  test04.stor  test05.stor  test06.stor  test07.stor  test09.gmv  test09_nohybrid.stor  test11.gmv  test11.stor  x.in
test/level01/interp_continuous/: input_hex.inp  input_tet3x3_flat.inp  output_view_con05.gmv
test/level01/interp_map/: input_3d_hex.inp  input_3d_hex_small.inp  input_tet24.inp  output_map02_nearest.gmv  output_map02_plus1.gmv
test/level01/interp_voronoi/: input.lgi  input_2d_hires_trans.inp  input_3d_hex.gmv  input_3d_hex_id.gmv  input_500_quad.gmv  input_500_quad.inp  (+20 more)
test/level02/: README  check_test.py  control02.py  diffout_lin.txt  outx3dgen  run_test.py  stdout_lin64.txt
test/level03/: README
test/lg_test_lib/: __init__.py  check_test.py  clean_test.py  run_test.py
test/results/: diffout_080117.txt  diffout_lin.txt  diffout_mac.txt  diffout_sun.txt  stdout_lin.txt
test/testlagrit/: __init__.py  check_test.py  diff.py  find_lagrit.py  helper_functions.py  logger.py  run_lagrit.py  run_test.py
(+4211 files in other folders)
